<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.AddDiaryActivity">
    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_horary_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    >


        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_horary_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/toolbar_food"
                app:title="Novo horario"
        />
    </com.google.android.material.appbar.AppBarLayout>
    <com.google.android.material.card.MaterialCardView
            android:id="@+id/container_add_food_diary"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:layout_constraintTop_toBottomOf="@+id/appbar_horary_add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="10dp"
            app:cardCornerRadius="60dp"
    >
        <ImageView android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:id="@+id/image_horary_add_total"
                   android:contentDescription="@string/image_food_adapter"/>

        <ImageView android:layout_width="30dp"
                   android:layout_height="30dp"
                   android:id="@+id/image_horary_add"
                   android:src="@drawable/ic_photo_camera"
                   android:layout_gravity="bottom|center"
                   android:alpha="0.7"
                   android:elevation="8dp"
                   android:contentDescription="@string/image_food_adapter"/>
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/adapter_title_editext_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"

            android:layout_marginBottom="8dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container_add_food_diary">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/adapter_title_editext_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/title_add_fodd"


                android:gravity="top"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/adapter_horary_editext_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"

            android:layout_marginBottom="8dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adapter_title_editext_input">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/adapter_horary_editext_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/horary_add_food"

                android:gravity="top"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/adapter_calory_editext_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"

            android:layout_marginBottom="8dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adapter_horary_editext_input">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/adapter_calory_editext_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/calory"
                android:gravity="top"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
            android:id="@+id/add_diary_acivity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adapter_calory_editext_input"
            android:text="@string/adicione"
            android:layout_margin="16dp"
            android:padding="16dp"
            app:cornerRadius="8dp"

    />

</androidx.constraintlayout.widget.ConstraintLayout>